--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "moment": "^2.24.0",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
+    "vue-tabs-component": "^1.5.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
