--- a/src/config.json
+++ b/src/config.json
@@ -1,3 +1,4 @@
 {
-  "API_URL": "https://pokeapi.co/api/v2/"
+  "API_URL": "https://pokeapi.co/api/v2/",
+  "IBGE_API_URL": "https://servicodados.ibge.gov.br/api/v1/localidades/"
 }
