--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "css-loader": "^3.4.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "vee-validate": "^3.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vue-tabs-component": "^1.5.0",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
