--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-router": "^3.1.3",
     "vue-tabs-component": "^1.5.0",
     "vue-the-mask": "^0.11.1",
+    "vue2-datepicker": "^3.3.0",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
