Trocando botão entrar no cresca play no MENU.vue; colocando botão para acesso ao cresca play na sessão de informations no HOME.VUE; trocando LOGO no MENU.vue; trocando banner no regulamento

--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,5 @@
 {
   "API_URL": "https://pokeapi.co/api/v2/",
-  "IBGE_API_URL": "https://servicodados.ibge.gov.br/api/v1/localidades/"
+  "IBGE_API_URL": "https://servicodados.ibge.gov.br/api/v1/localidades/",
+  "CRESCA_URL": "https://preprod.edtech.com.br/CrescaPlayMD"
 }
