--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "css-loader": "^3.4.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
+    "validar-cpf": "^2.1.2",
     "vee-validate": "^3.2.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
